# RLSGaurd

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  example-scan.yml
fixtures/frontend-service-role-key/: expected_findings.json
fixtures/frontend-service-role-key/src/: supabaseClient.ts
fixtures/ownership-not-protected/: expected_findings.json
fixtures/public-read-non-sensitive/: expected_findings.json
fixtures/rls-without-policies/: expected_findings.json
fixtures/safe-publishable-key/src/: supabaseClient.ts
fixtures/secure-security-definer/: expected_findings.json
fixtures/table-without-rls/: expected_findings.json
fixtures/trigger-security-definer/: expected_findings.json
fixtures/unrestricted-select-policy/: expected_findings.json
fixtures/unsafe-security-definer/: expected_findings.json
fixtures/unsafe-storage-policy/: expected_findings.json
fixtures/update-missing-with-check/: expected_findings.json
src/rlsguard/: __init__.py  engine.py
src/rlsguard/cli/: __init__.py  main.py
src/rlsguard/models/: __init__.py  finding.py  function.py  policy.py  table_state.py
src/rlsguard/rag/: __init__.py  corpus.py  explainer.py  llm.py  retriever.py
src/rlsguard/rules/: __init__.py  base.py  functions.py  policies.py  rls.py  secrets.py  (+1 more)
tests/: _helpers.py  test_explain_invariance.py  test_func_001.py  test_func_001_exposure.py  test_key_001.py  test_rag.py  test_rls_001.py  test_rls_001_grants.py  test_rls_002.py  test_rls_003.py  test_rls_004.py  test_rls_005.py  test_sarif.py  test_storage_001.py
(+28 files in other folders)
